使用 Colab 创建而成

--- a/Module 01/02_Fixing_Mistakes_in_Python.ipynb
+++ b/Module 01/02_Fixing_Mistakes_in_Python.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/michael-borck/ISYS2001/blob/main/Module%2001/02_Fixing_Mistakes_in_Python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/EJ-Syj/ISYS2001/blob/main/Module%2001/02_Fixing_Mistakes_in_Python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -41,17 +41,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "vscode": {
           "languageId": "python"
         },
-        "id": "OunfPQvHOFFW"
+        "id": "OunfPQvHOFFW",
+        "outputId": "dd4ef401-91ea-4302-9ef9-ebf1a0042f44",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello\n",
+            "Python!\n"
+          ]
+        }
+      ],
       "source": [
         "print(\"Hello\")\n",
-        "     print(\"Python!\")"
+        "print(\"Python!\")"
       ]
     },
     {
@@ -72,16 +85,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "vscode": {
           "languageId": "python"
         },
-        "id": "ceCZd5ShOFFX"
+        "id": "ceCZd5ShOFFX",
+        "outputId": "381acd75-d15b-4a11-a40e-f88b7224fa89",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "All caps\n"
+          ]
+        }
+      ],
       "source": [
-        "PRINT(\"All caps\")"
+        "print(\"All caps\")"
       ]
     },
     {
@@ -97,16 +122,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "vscode": {
           "languageId": "python"
         },
-        "id": "KldK0H5HOFFY"
+        "id": "KldK0H5HOFFY",
+        "outputId": "e8f55c97-d8a7-477d-e173-c9c96e63d26d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello, World!\n"
+          ]
+        }
+      ],
       "source": [
-        "pint(\"Hello, World!\")"
+        "print(\"Hello, World!\")"
       ]
     },
     {
@@ -127,16 +164,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "vscode": {
           "languageId": "python"
         },
-        "id": "maEfvkH0OFFY"
+        "id": "maEfvkH0OFFY",
+        "outputId": "b2bd2620-0031-46f6-aa18-88157170fffb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Python\n"
+          ]
+        }
+      ],
       "source": [
-        "print(\"Python)"
+        "print(\"Python\")"
       ]
     },
     {
@@ -152,16 +201,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "vscode": {
           "languageId": "python"
         },
-        "id": "5Xs4R7qBOFFY"
+        "id": "5Xs4R7qBOFFY",
+        "outputId": "ab8b4e6a-1465-43b4-ec18-420b71c373e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I have no end\n"
+          ]
+        }
+      ],
       "source": [
-        "print(\"I have no end\""
+        "print(\"I have no end\")"
       ]
     },
     {
@@ -179,7 +240,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -188,11 +249,11 @@
       },
       "outputs": [],
       "source": [
-        "# prinT(\"Good morning!\"\n",
-        "# Print(\"Python is amazing!\")\n",
-        "#     print(\"Let's learn Python together!\"\n",
+        "# print(\"Good morning!\")\n",
+        "# print(\"Python is amazing!\")\n",
+        "# print(\"Let's learn Python together!\")\n",
         "# print(\"Coding is exciting\")\n",
-        "# print(\"I have no idea what's going on!\""
+        "# print(\"I have no idea what's going on!\")"
       ]
     },
     {
