使用 Colab 创建而成

--- a/Module 01/03_Making_Your_Python_Code_Clear_and_Readable.ipynb
+++ b/Module 01/03_Making_Your_Python_Code_Clear_and_Readable.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/michael-borck/ISYS2001/blob/main/Module%2001/03_Making_Your_Python_Code_Clear_and_Readable.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/EJ-Syj/ISYS2001/blob/main/Module%2001/03_Making_Your_Python_Code_Clear_and_Readable.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -62,14 +62,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "vscode": {
           "languageId": "python"
         },
-        "id": "X5QK3LOBPbdt"
+        "id": "X5QK3LOBPbdt",
+        "outputId": "02ca8591-ace0-428f-8a6d-c266b76364bc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "How\n",
+            "are\n",
+            "you?\n"
+          ]
+        }
+      ],
       "source": [
         "print(\"How\")\n",
         "\n",
@@ -113,10 +127,10 @@
         "Now, let's put this into practice. Rearrange the lines below to print:\n",
         "\n",
         "```\n",
-        "Blank spaces matter\n",
-        "for clarity\n",
-        "\n",
-        "and style!\n",
+        "print(Blank spaces matter)\n",
+        "print(for clarity)\n",
+        "print()\n",
+        "Print(and style!)\n",
         "```\n",
         "\n",
         "> *Advanced Tip:* Think about the order in which the lines are printed and how blank lines affect the overall output.\n",
@@ -190,19 +204,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "vscode": {
           "languageId": "python"
         },
-        "id": "RcPkDyHAPbdu"
+        "id": "RcPkDyHAPbdu",
+        "outputId": "b8c55d99-c4c9-4a86-d219-f024c481e886",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "To-Do List:\n",
+            "1. Complete Python exercise\n",
+            "2. Review coding concepts\n",
+            "3. Have a cuppa tea\n"
+          ]
+        }
+      ],
       "source": [
-        "print('To-Do List:\n",
+        "print('''To-Do List:\n",
         "1. Complete Python exercise\n",
         "2. Review coding concepts\n",
-        "3. Have a cuppa tea')"
+        "3. Have a cuppa tea''')"
       ]
     },
     {
@@ -238,10 +267,10 @@
         "Now, create a Python program to print a personal profile using a single `print()` function. Here's the target output:\n",
         "\n",
         "```\n",
-        "Personal Profile:\n",
+        "print:('''Personal Profile:\n",
         "Name: Alice Smith\n",
         "Favourite Language: Python\n",
-        "Hobby: Coding and bushwalking\n",
+        "Hobby: Coding and bushwalking''')\n",
         "```\n",
         "\n",
         "> *Note:* You still have three options available (multiple print statements, `\\n`, or triple quotes), but try a different one from the previous challenge.\n",
