使用 Colab 创建而成

--- a/Module 02/Mini_Project_02_Finance_Tracker_Profile_Setup.ipynb
+++ b/Module 02/Mini_Project_02_Finance_Tracker_Profile_Setup.ipynb
@@ -165,7 +165,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "U8Ykypy4cPuZ"
+        "id": "U8Ykypy4cPuZ",
+        "outputId": "8888c7cd-f964-4530-8e33-eae6554862c6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# Import datetime to timestamp your work\n",
@@ -186,6 +190,27 @@
         "# Display the summary message\n",
         "print(summary)"
       ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What is your name? Ej\n",
+            "What color would you like for your app theme? (e.g., blue, green, dark) dark\n",
+            "What is your primary currency? (e.g., AUD, USD, EUR) CNy\n",
+            "What is one big savings goal you have? (e.g., New Car, Holiday) holiday\n",
+            "Welcome to your Personal Finance Tracker, Ej! Your profile is ready. The app will use a dark theme and all amounts will be in CNy. Let's start working towards your goal of saving for a holiday!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "o55y8u7kv4TZ"
+      },
       "execution_count": null,
       "outputs": []
     },
@@ -206,10 +231,9 @@
       "cell_type": "code",
       "metadata": {
         "id": "new-evidence-code-cell",
-        "outputId": "eca0bd7f-2d3e-4b92-e8eb-95c10cb09308",
+        "outputId": "f66b109f-be21-4af3-d98e-55e72de7b2dc",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 211
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
@@ -236,61 +260,6 @@
         "        print(f'{key.replace(\"_\", \" \").title()}: {value}')\n",
         "print(\"=\"*50)"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'datetime' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-3663048752.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Complete this dictionary with your reflections.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m evidence_package = {\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0;34m\"timestamp\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrftime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'%Y-%m-%d %H:%M:%S'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0;34m\"student_name\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"[Your Name Here]\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;34m\"project_context\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"This project involved creating the initial user profile for a personal finance tracker, focusing on applying a structured problem-solving methodology.\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'datetime' is not defined"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from datetime import datetime\n",
-        "\n",
-        "evidence_package = {\n",
-        "    \"timestamp\": datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\"),\n",
-        "    \"student_name\": \"Yi Jie Shi\",\n",
-        "\n",
-        "    \"project_content\": \"This project involved creating the initial user profile for a personal finance tracker, focusing on applying a structured problem-solving methodology.\",\n",
-        "\n",
-        "    \"ai_tool_used\": \"ChatGPT\",\n",
-        "\n",
-        "    \"ai_assistance_summary\": \"I used AI to clarify the logic of my pseudocode and improve my variable naming. It also helped me phrase the final summary message more clearly and professionally.\",\n",
-        "\n",
-        "    \"best_practice_reflection\": \"I followed the best practice of using descriptive and meaningful variable names like 'primary_currency' and 'main_savings_goal', which made my code more readable and self-documenting.\",\n",
-        "\n",
-        "    \"best_learning\": \"I learned the importance of gathering user input in a structured way and constructing output messages dynamically using string concatenation and formatting.\"\n",
-        "}\n",
-        "\n",
-        "# Optional: display the result in a formatted way\n",
-        "print(\"=\"*50)\n",
-        "print(\"EVIDENCE PACKAGE SUBMISSION\")\n",
-        "print(\"=\"*50)\n",
-        "\n",
-        "for key, value in evidence_package.items():\n",
-        "    if isinstance(value, str) and len(value) > 60:\n",
-        "        print(f\"\\n{key.replace('_', ' ').title()}:\\n{value}\")\n",
-        "    else:\n",
-        "        print(f\"{key.replace('_', ' ').title()}: {value}\")\n",
-        "\n",
-        "print(\"=\"*50)"
-      ],
-      "metadata": {
-        "id": "jkuWhON8G4FP",
-        "outputId": "c5dcaaad-8294-47c4-88e3-8dd16a0b4fde",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
       "execution_count": 3,
       "outputs": [
         {
@@ -300,21 +269,21 @@
             "==================================================\n",
             "EVIDENCE PACKAGE SUBMISSION\n",
             "==================================================\n",
-            "Timestamp: 2025-08-04 12:44:57\n",
-            "Student Name: Yi Jie Shi\n",
+            "Timestamp: 2026-02-26 07:03:41\n",
+            "Student Name: [Your Name Here]\n",
             "\n",
-            "Project Content:\n",
-            "This project involved creating the initial user profile for a personal finance tracker, focusing on applying a structured problem-solving methodology.\n",
-            "Ai Tool Used: ChatGPT\n",
+            "Project Context:\n",
+            "  This project involved creating the initial user profile for a personal finance tracker, focusing on applying a structured problem-solving methodology.\n",
+            "Ai Tool Used: [e.g., Gemini, ChatGPT, GitHub Copilot]\n",
             "\n",
             "Ai Assistance Summary:\n",
-            "I used AI to clarify the logic of my pseudocode and improve my variable naming. It also helped me phrase the final summary message more clearly and professionally.\n",
+            "  [Describe how you used the AI. e.g., 'I used the AI to review my pseudocode for clarity and to suggest alternative wording for my final summary message.' ]\n",
             "\n",
             "Best Practice Reflection:\n",
-            "I followed the best practice of using descriptive and meaningful variable names like 'primary_currency' and 'main_savings_goal', which made my code more readable and self-documenting.\n",
+            "  [Reflect on a best practice. e.g., 'Using descriptive variable names like `primary_currency` instead of `c` made my code self-documenting and much easier to read when constructing the final summary string.']\n",
             "\n",
-            "Best Learning:\n",
-            "I learned the importance of gathering user input in a structured way and constructing output messages dynamically using string concatenation and formatting.\n",
+            "Key Learning:\n",
+            "  [What was your main takeaway? e.g., 'I learned that working the problem by hand first makes writing the actual code much faster because I already have a clear plan and expected output.']\n",
             "==================================================\n"
           ]
         }
